--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">The Movie DB</string>
     <string name="title_home">Popular</string>
     <string name="title_dashboard">Discover</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!--    <string name="title_notifications">Notifications</string>-->
 </resources>
